# ignis-nostr

./: Cargo.toml  LICENSE.txt  README.md
src/: consts.rs  fhir_trait.rs  lib.rs
src/datatypes/: mod.rs
src/metadata/: mod.rs
src/resources/: appointment.rs  appointment_response.rs  mod.rs  organization.rs  practitioner.rs
src/valuesets/: actors.rs  addresses.rs  appointments.rs  contacts.rs  mod.rs  specialty.rs
