[package]
name = "ignis-nostr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Nostr tools for integration of HL7 FHIR resources"
repository = "https://github.com/illuminodes/ignis-nostr"
readme = "README.md"
homepage = "https://github.com/illuminodes/ignis-nostr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostro2 = "0.1.26"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.125"

